Ensure horizontal scroll is hidden.

--- a/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
+++ b/themes/experience-engine/assets/styles/components/navigation/primary-sidebar.css
@@ -27,7 +27,8 @@
 			margin-left: -1rem;
 			max-height: calc(100% - 176px);
 			max-width: 188px;
-			overflow: auto;
+			overflow-x: hidden;
+			overflow-y: auto;
 			padding: 0 1rem;
 			position: fixed;
 			width: 100%;
